refactor: rearanged headers

--- a/index.html
+++ b/index.html
@@ -15,22 +15,32 @@
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
-    <!-- Header -->
-    <header class="header">
-        <div class="container">
-            <a href="#" class="logo">
-                <img src="./assets/img/White-logo-no-background.png" alt="CleanLeaf Microgreens" class="logo-img">
-            </a>
-        </div>
-    </header>
-
-    <!-- Hero Section -->
+    <!-- Hero Section (header merged in) -->
     <section class="hero">
-        <div class="container">
+        <div class="hero-inner">
             <div class="hero-content">
-                <h2 class="hero-title">Fresh Microgreens, Delivered to Your Door</h2>
-                <p class="hero-subtitle">Nutrient-dense, organic microgreens grown with care and sustainability in mind.</p>
-                <a href="#signup" class="btn btn-primary">Get Started Today</a>
+                <a href="#" class="hero-logo">
+                    <img src="./assets/img/White-logo-no-background.png" alt="CleanLeaf Microgreens" class="hero-logo-img">
+                </a>
+                <p class="hero-tagline">Fresh, Organic & Sustainably Grown</p>
+                <h2 class="hero-title">Elevate Every Meal<br>with Microgreens</h2>
+                <p class="hero-subtitle">Nutrient-dense greens harvested at peak freshness and delivered straight to your door.</p>
+                <a href="#signup" class="btn btn-hero">Get Started Today</a>
+            </div>
+            <div class="hero-images">
+                <div class="hero-ring"></div>
+                <div class="hero-circle hero-circle--a">
+                    <img src="./assets/img/Food.jpg" alt="Fresh microgreen salad bowl">
+                </div>
+                <div class="hero-circle hero-circle--b">
+                    <img src="./assets/img/3-de7f6c5c-f3a1-4300-aa62-7b141154ed61-1000x1000.jpg" alt="Grilled salmon with microgreens">
+                </div>
+                <div class="hero-circle hero-circle--c">
+                    <img src="./assets/img/2-bfa117e5-a690-4d18-accd-9776f77a9835-1000x1000.jpg" alt="Lemon tart garnished with microgreens">
+                </div>
+                <div class="hero-circle hero-circle--d">
+                    <img src="./assets/img/poke-restaurant-13.jpg" alt="Poke bowl with fresh greens">
+                </div>
             </div>
         </div>
     </section>
@@ -87,8 +97,8 @@
                     <a href="#signup" class="btn btn-light">Get Started</a>
                 </div>
                 <div class="benefits-image">
-                    <div class="placeholder-image">
-                        <span>🌿</span>
+                    <div class="benefits-img-wrapper">
+                        <img src="./assets/img/SuperchargeYourHealth.png" alt="Fresh microgreens supercharge your health" class="benefits-img">
                     </div>
                 </div>
             </div>
