refactor: fixed home_banner

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <img src="./assets/img/White-logo-no-background.png" alt="CleanLeaf Microgreens" class="hero-logo-img">
                 </a>
                 <p class="hero-tagline">Fresh, Organic & Sustainably Grown</p>
-                <h2 class="hero-title">Elevate Every Meal<br>with Microgreens</h2>
+                <h2 class="hero-title">Elevate Every Meal with Microgreens</h2>
                 <p class="hero-subtitle">Nutrient-dense greens harvested at peak freshness and delivered straight to your door.</p>
                 <a href="#signup" class="btn btn-hero">Get Started Today</a>
             </div>
